# source/dea-app/src/models/case.ts
@@ -3,6 +3,7 @@
  *  SPDX-License-Identifier: Apache-2.0
  */
 
+import { CaseFileStatus } from './case-file-status';
 import { CaseStatus } from './case-status';
 
 export interface DeaCase {
@@ -11,6 +12,7 @@ export interface DeaCase {
   readonly status: CaseStatus;
   readonly description?: string;
   readonly objectCount?: number;
+  readonly filesStatus: CaseFileStatus;
   readonly created?: Date;
   readonly updated?: Date;
 }
@@ -18,4 +20,10 @@ export interface DeaCase {
 export interface DeaCaseInput {
   readonly name: string;
   readonly description?: string;
+}
+
+export interface UpdateCaseStatusInput {
+  readonly name: string;
+  readonly status: CaseStatus;
+  readonly deleteFiles: boolean;
 }
