# source/dea-backend/src/resources/dea-route-config.ts
@@ -48,6 +48,12 @@ export const deaApiRouteConfig: ApiGatewayRouteConfig = {
       pathToSource: '../../src/handlers/update-cases-handler.ts',
     },
     {
+      eventName: AuditEventType.UPDATE_CASE_STATUS,
+      path: '/cases/{caseId}/status',
+      httpMethod: ApiGatewayMethod.PUT,
+      pathToSource: '../../src/handlers/update-case-status-handler.ts',
+    },
+    {
       eventName: AuditEventType.DELETE_CASE,
       path: '/cases/{caseId}/details',
       httpMethod: ApiGatewayMethod.DELETE,
